--- a/vsf/src/web/WEB-INF/web.xml
+++ b/vsf/src/web/WEB-INF/web.xml
@@ -20,22 +20,14 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>action</servlet-name>
-    <url-pattern>*.do</url-pattern>
+    <url-pattern>*.html</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>/la/pages/login/login.jsp</welcome-file>
   </welcome-file-list>
   <resource-ref>
     <res-ref-name>jdbc/vesmile/demo</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
-  <filter>
-    <filter-name>struts2</filter-name>
-    <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>struts2</filter-name>
-    <url-pattern>*.action</url-pattern>
-  </filter-mapping>
 </web-app>
